# quartumse-internal

./: .gitignore  .pre-commit-config.yaml  404.html  BOOTSTRAP_SUMMARY.md  Benchmarking_Improvement.md  CHANGELOG.md  CITATION.cff  CNAME  CODEX_TASKS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_STORAGE.md  H2_EXPERIMENT_REPORT.md  INSTALL_GUIDE.md  INTERNAL_WORKFLOW.md  LICENSE  Measurements_Bible.md  OPS_RUNTIME_RUNBOOK.md  PROJECT_BIBLE.md  QUICKSTART.txt  README.md  ROADMAP.md  SECURITY.md  SESSION_PROGRESS_2025_11_04.md  SETUP.md  STATUS_REPORT.md  STRATEGIC_ANALYSIS.md  SUPPORT.md  TESTING_GUIDE.md  bayesian_adaptive_protocol.py  bayesian_adaptive_report.html  bench_optimizations.py  benchmark_performance_bottlenecks.md  check_backends.py  codecov.yml  generate_mega_report.py  h2_optimized_config.py  index.html  mega_benchmark_report.html  mega_benchmark_report_review.md  (+19 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  experiment_question.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  experiments.yml  release.yml
CNAME_README/: index.html
Research/: experiment_plan_text.md
api/: conf.py  index.rst
api/reference/: index.rst
archive/: index.html
community/community-hub/: index.html
community/partnerships/: index.html
data/: README.md
demo_data/: README.md
docs/: CNAME_README.md  README.md  archive.md  index.md  profiling_optimizations_20260213.md  sampler_performance_recommendations.md  testing.md
docs/api/: conf.py  index.rst
docs/archive/: bootstrap_summary_20251020.md  strategic_analysis_20251021.md
docs/community/: community-hub.md  partnerships.md
docs/explanation/: architecture.md  manifest-schema.md  shadows-theory.md
docs/guides/: getting_started.md  pipeline.md  testing.md
docs/home/: educational-videos.md
docs/how-to/: generate-report.md  replay-from-manifest.md  run-automated-pipeline.md  run-mem-v1.md  run-st01-ghz.md  run-tests.md
docs/ops/: ci_expansion_guide.md  ci_test_strategy.md  lessons_learned_sphinx_ci.md  runtime_runbook.md  sphinx_regression_analysis.md
docs/reference/: cli.md  observable-notation.md
docs/research/: experiment-tracker.md  index.md  literature.md  phase1-research-plan.md
docs/strategy/: H2_EXPERIMENTAL_CAMPAIGN.md  STRATEGIC_ANALYSIS.md  phase1_reference_runs.md  phase1_task_checklist.md  project_bible.md  roadmap.md  runtime_budgeting_checklist.md  strategic_review_2025_10_30.md
docs/tutorials/: hardware_quickstart.md  quickstart.md
examples/: publication_benchmark_demo.py  quickstart_benchmark.py  shadows_vs_baselines_benchmark.py
experiments/: __init__.py
experiments/archive/: README.md
experiments/benchmarking/: B_T01_rb_starter.py
experiments/optimization/: O_T01_maxcut_starter.py  O_T01_qaoa_maxcut.py
experiments/pipeline/: __init__.py  _observables.py  _runners.py  analyzer.py  executor.py  metadata_schema.py  reporter.py  run_full_pipeline.py  verifier.py
experiments/reference/: run_phase1_reference.py
experiments/shadows/: EXPERIMENT_PLAN.md  EXPERIMENT_PLAN_TASKS.md  README.md  S_T01_ghz_baseline.py  common_utils.py
how-to/run-mem-v1/: index.html
notebook_data/: README.md
notebooks/: benchmark_report_20260130.html  benchmark_report_comprehensive.html  benchmark_shadows_vs_baselines.ipynb  circuit_guide_complete.html  classical_shadows_deep_dive.ipynb  comprehensive_test_suite.ipynb  generate_circuit_guide.py  generate_circuit_guide_notebook.ipynb  generate_comprehensive_report.ipynb  noise_aware_shadows_demo.ipynb  notebook_a_protocol_comparison.py  notebook_b_ground_truth_validation.py  notebook_benchmark_suite.ipynb  notebook_c_commuting_grouping_baseline.py  notebook_d_scaling_observables.py  notebook_e_scaling_locality_weight.py  notebook_f_fixed_budget_distribution.py  notebook_g_uncertainty_calibration.py  notebook_h_pilot_selection_regret.py  notebook_i_noise_hardware_readiness.py  notebook_j_full_publication_benchmark_ghz_shadows_v0.ipynb  notebook_k_locality_benchmark.ipynb  notebook_l_comprehensive_benchmark.ipynb  notebook_l_random_bloch_benchmark.ipynb  notebook_pennylane_benchmark.ipynb  notebook_research_benchmark.html  notebook_research_benchmark.ipynb  notebook_utils.py  preliminary_smoke_test.ipynb  quickstart_shot_persistence.ipynb  real_experiment_strategy.html  review_h2_experiment.ipynb  review_o_t01_qaoa.ipynb  review_smoke_test_results.ipynb  shadows_vs_bruteforce_tutorial.ipynb
profiling_optimizations_20260213/: index.html
research/: index.html
sampler_performance_recommendations/: index.html
scripts/: update_perf_baseline.py  validate_optimizations.py  validate_optimizations_standalone.py
search/: search_index.json
templates/: report_template.html.jinja2
testing/: index.html
tests/: conftest.py
tools/: generate_cli_docs.sh  precommit_detect_ibm_token.py
validation_data/: README.md  SAVED_DATA_GUIDE.md
(+969 files in other folders)
