[build-system]
requires = ["setuptools>=65.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quartumse"
version = "0.1.0"
description = "Vendor-neutral quantum measurement optimization with classical shadows and provenance tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "QuartumSE Team", email = "contact@quartumse.dev"}
]
keywords = ["quantum computing", "error mitigation", "classical shadows", "NISQ", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core quantum frameworks
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "qiskit-ibm-runtime>=0.20.0",

    # Numerical computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",

    # Data handling
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",  # For Parquet
    "duckdb>=0.10.0",

    # Reporting & visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jinja2>=3.1.0",

    # CLI & API
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
]

docs = [
    "sphinx>=7.2.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

# Phase 2+ optional dependencies (Python <3.13 required)
mitigation = [
    "mitiq>=0.25.0; python_version<'3.13'",
]

chemistry = [
    "qiskit-nature>=0.7.0; python_version<'3.13'",
    "pyscf>=2.3.0; python_version<'3.13'",
]

reporting = [
    "weasyprint>=60.0",  # PDF generation
]

aws = [
    "amazon-braket-sdk>=1.70.0",
]

all = [
    "quartumse[dev,mitigation,chemistry,reporting,aws]",
]

[project.scripts]
quartumse = "quartumse.cli:app"

[project.urls]
Homepage = "https://github.com/quartumse/quartumse"
Documentation = "https://docs.quartumse.dev"
Repository = "https://github.com/quartumse/quartumse"
Issues = "https://github.com/quartumse/quartumse/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=quartumse",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: marks tests that require real quantum hardware",
    "integration: marks integration tests",
    "smoke: marks smoke tests for quick validation of critical paths",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "qiskit_aer.*",
    "qiskit_ibm_runtime.*",
    "mitiq.*",
    "duckdb.*",
    "matplotlib.*",
    "seaborn.*",
    "pandas.*",
    "yaml",
    "yaml.*",
    "weasyprint.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/quartumse"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
